# cubi-tk

./: .gitignore  .gitlab-ci.yml  .prospector.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  main.yml  release-please.yml
cubi_sak/: __main__.py  common.py  exceptions.py
cubi_sak/isa_tab/: __init__.py  resolve_hpo.py  validate.py
cubi_sak/isa_tpl/: __init__.py
cubi_sak/org_raw/: __init__.py  check.py  organize.py  organize.py.orig
cubi_sak/sea_snap/: __init__.py  check.py  itransfer_mapping_results.py  itransfer_raw_data.py  itransfer_results.py  pull_isa.py  pull_sheet.py  working_dir.py  write_sample_info.py
cubi_sak/snappy/: __init__.py  check.py  isa_support.py  itransfer_common.py  itransfer_raw_data.py  (+7 more)
cubi_tk/: __init__.py  __main__.py  _version.py  common.py  exceptions.py  irods_common.py  irods_utils.py  isa_support.py  parse_ped.py  sodar_api.py  sodar_common.py
docs_manual/: Makefile  cli_docs.rst  conf.py  history.rst  index.rst  installation.rst  make.bat  man_archive.rst  man_dkfz.rst  man_ingest_data.rst  man_ingest_fastq.rst  man_isa_tab.rst  man_isa_tpl.rst  man_itransfer_results.rst  man_sodar_ingest.rst  man_sodar_ingest_collection.rst  man_write_sample_info.rst  sodar_setup.rst  usecase_archive_project.rst  usecase_exomes.rst  usecase_single_cell.rst
requirements/: base.txt  develop.txt  test.txt  test_black.txt
tests/: _test_seasnap_pull_isa.py  conftest.py  factories.py  helpers.py  hide_modules.py  test_archive_common.py  test_archive_copy.py  test_archive_prepare.py  test_archive_readme.py  test_archive_summary.py  test_common.py  test_dkfz_ingest_fastq.py  test_dkfz_ingest_meta.py  test_dkfz_prepare_isatab.py  test_ena_constants.py  test_irods_common.py  test_irods_utils.py  test_isa_tab_add_ped.py  test_isa_tab_annotate.py  test_isa_tpl.py  test_main.py  test_seasnap_itransfer_results.py  test_seasnap_pull_isa.py  test_seasnap_working_dir.py  test_seasnap_write_sample_info.py  test_snappy.py  test_snappy_check_local.py  test_snappy_check_remote.py  test_snappy_common.py  test_snappy_itransfer_common.py  test_snappy_itransfer_ngs_mapping.py  test_snappy_itransfer_raw_data.py  test_snappy_itransfer_step.py  test_snappy_itransfer_sv_calling.py  test_snappy_itransfer_variant_calling.py  test_snappy_models.py  test_snappy_parse_sample_sheet.py  test_snappy_pull_data_common.py  test_snappy_pull_processed_data.py  test_snappy_pull_raw_data.py  (+16 more)
(+347 files in other folders)
